# ChangeLog for net-analyzer/rrdtool
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.180 2009/05/25 22:02:32 pva Exp $

*rrdtool-1.3.8 (25 May 2009)

  25 May 2009; Peter Volkov <pva@gentoo.org> +rrdtool-1.3.8.ebuild:
  Version bump, bug #271164, thank Opportunist for report.

  24 May 2009; Peter Volkov <pva@gentoo.org> -rrdtool-1.3.6.ebuild,
  rrdtool-1.3.7.ebuild:
  Fixed ruby bindings parallel build issue, thus added dependency on
  >=ruby-1.8.6_p287-r13 and droped -j1, bug #239101, thank MATSUU Takuto for
  this fix!

  18 May 2009; Peter Volkov <pva@gentoo.org> rrdtool-1.3.7.ebuild:
  Added notion that users need to install some font package after upgrade to
  1.3.x, thank Drew Kollasch for report.

*rrdtool-1.3.7 (07 Apr 2009)

  07 Apr 2009; Peter Volkov <pva@gentoo.org>
  -files/rrdtool-1.2.28-fix-empty-font.patch,
  -files/rrdtool-1.2.28-revert-font-fix.patch, -rrdtool-1.2.28-r1.ebuild,
  -rrdtool-1.2.28-r2.ebuild, -rrdtool-1.3.4.ebuild, -rrdtool-1.3.5.ebuild,
  +rrdtool-1.3.7.ebuild:
  Version bump. Remove old.

  08 Mar 2009; Dawid Węgliński <cla@gentoo.org> rrdtool-1.3.6.ebuild:
  Prevent double emake

  08 Mar 2009; Dawid Węgliński <cla@gentoo.org> rrdtool-1.3.6.ebuild:
  Migration to EAPI 2

  14 Feb 2009; Brent Baude <ranger@gentoo.org> rrdtool-1.2.29.ebuild:
  stable ppc, bug 255979

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> rrdtool-1.2.29.ebuild:
  Stable for HPPA (bug #255979).

  05 Feb 2009; Raúl Porcel <armin76@gentoo.org> rrdtool-1.2.29.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #255979

  01 Feb 2009; Markus Meier <maekke@gentoo.org> rrdtool-1.2.29.ebuild:
  x86 stable, bug #255979

  27 Jan 2009; Brent Baude <ranger@gentoo.org> rrdtool-1.2.29.ebuild:
  stable ppc64, bug 255979

  25 Jan 2009; Tobias Klausmann <klausman@gentoo.org> rrdtool-1.2.29.ebuild:
  Stable on alpha, bug #255979
