@@ -1,6 +1,6 @@
 DIST rrdtool-1.3.7.tar.gz 1084709 RMD160 ffa30cd01f77f8cbb674c7c22994f34e18f0a8f2 SHA1 802fc03107c5b600548beef0ee6ad6cf153fc1f1 SHA256 ce7c4e732642c3e57e2b60784dfc0e2d83cb561a13d2c43274f6ffa1caa20a55
 DIST rrdtool-1.3.8.tar.gz 1021427 RMD160 e05cada9d1df11ed474536c1f6e11d7cc4c08077 SHA1 1fe71706442ddd78ec8cdbaadd8ce16bb1326b05 SHA256 a7084e07a8c78e91ca7af211af11f777c7a040b93ce21ab1144dd00079da0f38
 EBUILD rrdtool-1.3.7.ebuild 2588 RMD160 b197d74c86081e8953f3b90941631748065ab608 SHA1 44ee753a711e34bdc572a54a29c39323ab376967 SHA256 9da9d1b5e7dce7252d7b09ab70848b9afee67400266d7142b2abdea78377d645
-EBUILD rrdtool-1.3.8.ebuild 2588 RMD160 fee204687d0693ea86f15cc74110eea8fbfcdd66 SHA1 a8fa1cb344688fbfc8836c095528fc2def9c88e9 SHA256 9189bdf22f663d7ab6e742cec582b4fcae033ec9588ef12638d840c607b470f5
-MISC ChangeLog 27286 RMD160 4bd9fc8d2aac2c33d6e62f1d536f051752635482 SHA1 84e719c8b0cdc662cf9239539eb542fc10717398 SHA256 1c5343f01cab86acf6fabfbae6a53a5472496571aff8968e030c45aa66f77135
-MISC metadata.xml 300 RMD160 9d38b7169a91e0be57ae6ab449296e56527a0d0b SHA1 c67d156899a9058bf4cf1b620299b7e18779fb37 SHA256 f7ced9a7b2949623b183802c55cef4e37d6e9e4d072a7243a5eb934c9ef5ac62
+EBUILD rrdtool-1.3.8.ebuild 2705 RMD160 03c2da5522c9bc75cc18a62b2ea2845cca019593 SHA1 864cd5be7202edf5db4d2b4050ffd597174e487f SHA256 ee96a86792ed50e44ac1aa76087de48c622d27f793d8d6ad57f457995b1c267a
+MISC ChangeLog 27564 RMD160 170aa360375bab473fbc3db7fa7d6ec9ed9979f6 SHA1 d8e1b3d6e9c03e23abab2aba3736bf7549d948dd SHA256 6b14ccf7d389750bcec0777a31cb06ee635c995d43694d5f20e23561293c1423
+MISC metadata.xml 376 RMD160 78da9054230eb8ed5474d75d1a0f7419eb1e45f9 SHA1 b7645e63557b4d5049032390ee07d86c5411fc96 SHA256 ccdb09cfa58f274722a7b61fb666c96c5d1c55d828fff44abc9415e56c056bb7
