@@ -3,5 +3,8 @@
 <pkgmetadata>
 <herd>netmon</herd>
 <longdescription>A system to store and display time-series data</longdescription>
-<use><flag name='rrdcgi'>Build rrdcgi support</flag></use>
+<use>
+	<flag name='rrdcgi'>Build rrdcgi support</flag>
+	<flag name='nls'>Enable native language support (using intltool)</flag>
+</use>
 </pkgmetadata>
