@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/rrdtool
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.180 2009/05/25 22:02:32 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.182 2009/06/01 19:58:42 pva Exp $
+
+  01 Jun 2009; Peter Volkov <pva@gentoo.org> rrdtool-1.3.8.ebuild,
+  metadata.xml:
+  Fixed build failure in case intltool is not intalled in the system (added
+  nls USE flag), bug #271438, thank Neil Bothwick, Drew Kollasch for report,
+  Sergey Dryabzhinsky for suggested fix.
 
 *rrdtool-1.3.8 (25 May 2009)
 
